--- a/index.html
+++ b/index.html
@@ -5,32 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Little Paradise Music</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <nav>
-            This is the nav bar
+        <!-- Navbar -->
+        <nav class="navbar navbar-light bg-light navbar-expand-sm">
+            <a href="index.html" class="navbar-brand">Little Paradise</a>
+
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item mr-2">
+                        <a href="#" class="nav-link">Tour</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" class="nav-link">Music</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" class="nav-link">Gallery</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-youtube"></i></a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-instagram"></i></a>
+                    </li>
+                    <li class="nav-item mr-2">
+                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-soundcloud"></i></a>
+                    </li>
+                </ul>
+            </div>
         </nav>
+        <!-- End of navbar --> 
     </header>
 
+        <!-- Hero image -->
     <section>
         This will be a hero image with text overlay
     </section>
+        <!-- End of hero image -->
 
+        <!--CTA section x 2 -->
     <section>
         This section will contain 2 CTAs - 'New EP' and 'Sign-Up'
     </section>
+        <!--End of CTA section -->
 
+        <!-- Tour dates -->
     <section>
         This section will contain the tour dates
     </section>
+        <!-- End of tour dates -->
 
+        <!-- Footer -->
     <footer>
         This is the footer
     </footer>
+        <!-- End of footer -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    
 </body>
 </html>
