add: font awesome social media links on nav bar

--- a/index.html
+++ b/index.html
@@ -11,49 +11,51 @@
 <body>
     <header>
         <!-- Navbar -->
-        <nav class="navbar navbar-light bg-light navbar-expand-sm">
-            <a href="index.html" class="navbar-brand">Little Paradise</a>
+        
+            <nav class="navbar navbar-light navbar-expand-sm fixed-top">
+                <a href="index.html" class="navbar-brand">Little Paradise</a>
 
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
 
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item mr-2">
-                        <a href="#" class="nav-link">Tour</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" class="nav-link">Music</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" class="nav-link">Gallery</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" class="nav-link">Contact</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item mr-2">
+                            <a href="#" class="nav-link">Tour</a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" class="nav-link">Music</a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" class="nav-link">Gallery</a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" class="nav-link">About</a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" class="nav-link">Contact</a>
+                        </li>
+                    </ul>
 
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-youtube"></i></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-instagram"></i></a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a href="#" target="_blank" class="nav-link"><i class="fab fa-soundcloud"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                    <ul class="navbar-nav mr-auto flex-row navbar-social">
+                        <li class="nav-item mr-2">
+                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-youtube"></i></a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a href="#" target="_blank" class="nav-link"><i class="fab fa-soundcloud"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
         <!-- End of navbar --> 
     </header>
 
