finish basic unstyled navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-sm fixed-top">
+            <nav class="navbar navbar-light bg-light navbar-expand-md fixed-top">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,8 +20,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav mx-auto" id="navigation-links">
                         <li class="nav-item mr-2">
                             <a href="#" class="nav-link">Tour</a>
                         </li>
@@ -38,8 +37,7 @@
                             <a href="#" class="nav-link">Contact</a>
                         </li>
                     </ul>
-
-                    <ul class="navbar-nav mr-auto flex-row navbar-social">
+                    <ul class="navbar-nav ml-auto flex-row" id="social-links">
                         <li class="nav-item mr-2">
                             <a href="#" target="_blank" class="nav-link"><i class="fab fa-facebook"></i></a>
                         </li>
