--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Little Paradise Music</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light bg-light navbar-expand-md fixed-top">
+            <nav class="navbar navbar-light navbar-expand-md">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,28 +60,43 @@
     </header>
 
         <!-- Hero image -->
-    <section>
+    <!-- <section>
         This will be a hero image with text overlay
-    </section>
+    </section> -->
         <!-- End of hero image -->
 
         <!--CTA section x 2 -->
-    <section>
+    <!-- <section>
         This section will contain 2 CTAs - 'New EP' and 'Sign-Up'
-    </section>
+    </section> -->
         <!--End of CTA section -->
 
         <!-- Tour dates -->
-    <section>
+    <!-- <section>
         This section will contain the tour dates
-    </section>
+    </section> -->
         <!-- End of tour dates -->
 
         <!-- Footer -->
-    <footer>
-        This is the footer
+    <footer class="page-footer">
+      
+        <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
+        <ul id="footer-social" class="page-footer">
+            <li>
+                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#" target="_blank"><i class="fab fa-soundcloud"></i></a>
+            </li>
+        </ul>
     </footer>
-        <!-- End of footer -->
+        <!-- End of footer + page -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
