--- a/index.html
+++ b/index.html
@@ -60,41 +60,47 @@
     </header>
 
         <!-- Hero image -->
-    <!-- <section>
-        This will be a hero image with text overlay
-    </section> -->
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col" id="hero-image">Hero image here</div>
+        </div>
+    </section>
         <!-- End of hero image -->
 
         <!--CTA section x 2 -->
-    <!-- <section>
-        This section will contain 2 CTAs - 'New EP' and 'Sign-Up'
-    </section> -->
+    <section class="container">
+        <div class="row">
+            <div class="col-6">CTA #1</div>
+            <div class="col-6">CTA #2</div>
+        </div>
+    </section>
         <!--End of CTA section -->
 
         <!-- Tour dates -->
-    <!-- <section>
-        This section will contain the tour dates
-    </section> -->
+    <section class="container">
+        <div>This section will contain the tour dates</div>
+    </section>
         <!-- End of tour dates -->
 
         <!-- Footer -->
     <footer class="page-footer">
-      
-        <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
-        <ul id="footer-social" class="page-footer">
-            <li>
-                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
-            </li>
-            <li>
-                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="#" target="_blank"><i class="fab fa-soundcloud"></i></a>
-            </li>
-        </ul>
+        <div>
+            <h4 id="footer-heading"><a href="index.html">Little Paradise</a></h4>
+            <ul id="footer-social" class="page-footer">
+                <li>
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="#" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                </li>
+            </ul>
+        </div>
     </footer>
         <!-- End of footer + page -->
 
