--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <!-- Hero image -->
     <section class="container-fluid">
         <div class="row">
-            <div class="col" id="hero-image">Hero image here</div>
+            <div class="col" id="hero-image"></div>
         </div>
     </section>
         <!-- End of hero image -->
