--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-md">
+            <nav class="navbar navbar-light navbar-expand-md fixed-top">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,8 +61,8 @@
 
         <!-- Hero image -->
     <section class="container-fluid">
-        <div class="row">
-            <div class="col" id="hero-image"></div>
+        <div class="row" id="hero-outer">
+            <div class="col-12" id="hero-image"></div>
         </div>
     </section>
         <!-- End of hero image -->
