--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!-- Hero image -->
     <section class="container-fluid">
-        <div class="row" id="hero-outer">
+        <div class="row">
             <div class="col-12" id="hero-image"></div>
         </div>
     </section>
