fix: responsivity bug on index.html

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <!--CTA section x 2 -->
     <section class="container">
         <div class="row">
-            <div class="col-6">CTA #1</div>
-            <div class="col-6">CTA #2</div>
+            <div class="col-sm-12 col-lg-6">CTA #1</div>
+            <div class="col-sm-12 col-lg-6">CTA #2</div>
         </div>
     </section>
         <!--End of CTA section -->
