add: basic html for cta cards on index.html

--- a/index.html
+++ b/index.html
@@ -70,8 +70,19 @@
         <!--CTA section x 2 -->
     <section class="container">
         <div class="row">
-            <div class="col-sm-12 col-lg-6">CTA #1</div>
-            <div class="col-sm-12 col-lg-6">CTA #2</div>
+            <div class="col-sm-12 col-lg-6 cta">
+                <div class="cta-content">
+                    <h3>NEW EP</h3>
+                    <button><a href="#">Buy Now</a></button>
+                </div>
+            </div>
+            
+            <div class="col-sm-12 col-lg-6 cta">
+                <div class="cta-content">
+                    <h3>MAILING LIST</h3>
+                    <button><a href="#">Buy Now</a></button>
+                </div>
+            </div>
         </div>
     </section>
         <!--End of CTA section -->
