--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-sm-12 col-lg-6 cta">
                 <div class="cta-content">
                     <h3>MAILING LIST</h3>
-                    <button><a href="#">Buy Now</a></button>
+                    <button><a href="#">Sign Up</a></button>
                 </div>
             </div>
         </div>
