add: bootstrap button to CTAs on index.html

--- a/index.html
+++ b/index.html
@@ -69,19 +69,24 @@
 
         <!--CTA section x 2 -->
     <section class="container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-6 cta">
+        <div class="row">      
+           <div class="col-lg-2 bg-secondary cta"></div>
+
+            <div class="col-sm-12 col-lg-4 bg-success cta">
                 <div class="cta-content">
                     <h3>NEW EP</h3>
-                    <button><a href="#">Buy Now</a></button>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
                 </div>
             </div>
+
+            <div class="col-lg-2 bg-secondary cta"></div>
             
-            <div class="col-sm-12 col-lg-6 cta">
+            <div class="col-sm-12 col-lg-4 bg-warning cta">
                 <div class="cta-content">
                     <h3>MAILING LIST</h3>
-                    <button><a href="#">Sign Up</a></button>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
                 </div>
+                
             </div>
         </div>
     </section>
