--- a/index.html
+++ b/index.html
@@ -70,24 +70,26 @@
         <!--CTA section x 2 -->
     <section class="container">
         <div class="row">      
-           <div class="col-lg-2 bg-secondary cta"></div>
+           <div class="col-lg-2 cta d-none d-lg-block"></div>
 
-            <div class="col-sm-12 col-lg-4 bg-success cta">
+            <div class="col-sm-12 col-lg-3 bg-success cta">
                 <div class="cta-content">
                     <h3>NEW EP</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
                 </div>
             </div>
 
-            <div class="col-lg-2 bg-secondary cta"></div>
+            <div class="col-lg-2 cta d-none d-lg-block"></div>
             
-            <div class="col-sm-12 col-lg-4 bg-warning cta">
+            <div class="col-sm-12 col-lg-3 bg-warning cta">
                 <div class="cta-content">
                     <h3>MAILING LIST</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
-                </div>
-                
+                </div>          
             </div>
+
+            <div class="col-lg-2 cta d-none d-lg-block"></div>
+
         </div>
     </section>
         <!--End of CTA section -->
