--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- End of hero image -->
 
         <!--CTA section x 2 -->
-    <section class="container">
+    <section class="container" id="cta-section">
         <div class="row">      
            <div class="col-lg-2 cta-grid d-none d-lg-block"></div>
 
@@ -95,8 +95,28 @@
         <!--End of CTA section -->
 
         <!-- Tour dates -->
-    <section class="container">
-        <div>This section will contain the tour dates</div>
+    <section class="container" id="tour-dates">
+        <h2>Tour Dates</h2>
+        <div class="row">
+            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
+            <div class="col-12 col-md-3">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3">SOLD OUT</div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
+            <div class="col-12 col-md-3">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3">SOLD OUT</div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
+            <div class="col-12 col-md-3">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3">SOLD OUT</div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
+            <div class="col-12 col-md-3">Student's Union, Bristol</div>
+            <div class="col-12 col-md-3">SOLD OUT</div>
+        </div>
     </section>
         <!-- End of tour dates -->
 
