--- a/music.html
+++ b/music.html
@@ -26,8 +26,8 @@
                         <li class="nav-item mr-2">
                             <a href="#" class="nav-link">Tour</a>
                         </li>
-                        <li class="nav-item mr-2">
-                            <a href="music.html" class="nav-link">Music</a>
+                        <li class="nav-item mr-2 active">
+                            <a href="#" class="nav-link">Music</a>
                         </li>
                         <li class="nav-item mr-2">
                             <a href="#" class="nav-link">Gallery</a>
@@ -59,67 +59,10 @@
         <!-- End of navbar --> 
     </header>
 
-        <!-- Hero image -->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-12" id="hero-image"></div>
-        </div>
-    </section>
-        <!-- End of hero image -->
 
-        <!--CTA section x 2 -->
-    <section class="container" id="cta-section">
-        <div class="row">      
-           <div class="col-lg-2 cta-grid d-none d-lg-block"></div>
 
-            <div class="col-sm-12 col-lg-3 cta cta-grid">
-                <div class="cta-content">
-                    <h3>NEW EP - OUT NOW</h3>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
-                </div>
-            </div>
 
-            <div class="col-lg-1 cta-grid d-none d-lg-block"></div>
-            
-            <div class="col-sm-12 col-lg-3 cta cta-grid">
-                <div class="cta-content">
-                    <h3>EMAIL UPDATES</h3>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
-                </div>          
-            </div>
-
-            <div class="col-lg-1 cta-grid d-none d-lg-block"></div>
-
-        </div>
-    </section>
-        <!--End of CTA section -->
-
-        <!-- Tour dates -->
-    <section class="container" id="tour-dates">
-        <h2>Tour Dates</h2>
-        <div class="row">
-            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-md-3"><h4>7 May 2021</h4></div>
-            <div class="col-12 col-md-3">Student's Union, Bristol</div>
-            <div class="col-12 col-md-3">SOLD OUT</div>
-        </div>
-    </section>
-        <!-- End of tour dates -->
-
+ 
         <!-- Footer -->
     <footer class="page-footer">
         <div>
