add: basic html structure to music.html

--- a/music.html
+++ b/music.html
@@ -14,7 +14,7 @@
     <header>
         <!-- Navbar -->
         
-            <nav class="navbar navbar-light navbar-expand-md fixed-top">
+            <nav class="navbar navbar-light navbar-expand-md">
                 <a href="index.html" class="navbar-brand">Little Paradise</a>
 
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,26 @@
         <!-- End of navbar --> 
     </header>
 
+    <h2 class="display-4">Music</h2>
 
+    <!-- Embedded YouTube video -->
+    <section class="container" id="youtube-iframe">
+            <div class="row">
+                <div class="col-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse doloremque alias quo? Alias fugit veritatis illo quasi, possimus veniam voluptatum sunt dolor. Earum quam sunt quisquam eaque tenetur, animi nam?Officia sint excepturi sed praesentium modi optio aperiam id similique maiores ducimus eos, delectus quam rerum, magnam fugiat velit, beatae eaque soluta voluptatem dolore. Ut quam minus alias magnam ducimus.</div>
+            </div>
+    </section>
+        
+    <section class="container" id="soundcloud-iframe">
+            <div class="row">
+                <div class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi suscipit perspiciatis, incidunt voluptatem itaque ducimus placeat impedit quisquam, dignissimos aliquid sint unde cupiditate! Repellat illum voluptatem minima ipsa maiores tempora.Tempora veritatis aliquam voluptates ipsa neque ducimus et explicabo rerum. Maxime dolorem ab omnis esse ut, in quisquam magni atque voluptate pariatur hic qui aspernatur laudantium consequuntur obcaecati non alias.</div>
+            </div>
+    </section>
+
+    <section class="container bandcamp-link">
+            <div class="row">
+                <div class="col-12">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse doloremque alias quo? Alias fugit veritatis illo quasi, possimus veniam voluptatum sunt dolor. Earum quam sunt quisquam eaque tenetur, animi nam?Officia sint excepturi sed praesentium modi optio aperiam id similique maiores ducimus eos, delectus quam rerum, magnam fugiat velit, beatae eaque soluta voluptatem dolore. Ut quam minus alias magnam ducimus.</div>
+            </div>
+    </section>
 
 
  
