fix: bug not allowing youtube iframe to run

--- a/music.html
+++ b/music.html
@@ -64,7 +64,7 @@
     <!-- Embedded YouTube video -->
     <section class="container music-content">
             <div class="row" id="youtube-iframe">
-                <div class="col"><iframe src="https://www.youtube.com/watch?v=ryyKCIndge0&ab_channel=FKershaw" height="400" width="400"><p>Your browser does not support iframes</p></iframe></div>
+                <div class="col"><iframe width="560" height="315" src="https://www.youtube.com/embed/ryyKCIndge0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><p>Your device does not support iframes</p></div>
             </div>
     </section>
         
