--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
         <!--CTA section x 2 -->
     <section class="container" id="cta-section">
         <div class="row">      
-           <div class="col-lg-2 cta-grid d-none d-lg-block"></div>
+           <div class="col-lg-2 d-none d-lg-block"></div>
 
-            <div class="col-sm-12 col-lg-3 cta cta-grid">
+            <div class="col-sm-12 col-lg-3 cta">
                 <div class="cta-content">
                     <h3>NEW EP - OUT NOW</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Buy Now</a>
                 </div>
             </div>
 
-            <div class="col-lg-1 cta-grid d-none d-lg-block"></div>
+            <div class="col-lg-1 d-none d-lg-block"></div>
             
-            <div class="col-sm-12 col-lg-3 cta cta-grid">
+            <div class="col-sm-12 col-lg-3 cta">
                 <div class="cta-content">
                     <h3>EMAIL UPDATES</h3>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
                 </div>          
             </div>
 
-            <div class="col-lg-1 cta-grid d-none d-lg-block"></div>
+            <div class="col-lg-1 d-none d-lg-block"></div>
 
         </div>
     </section>
