style: hero image to be responsive on smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
 
     <!-- Hero image -->
-    <section class="container-fluid appear-first">
+    <section class="appear-first" id="hero-outer">
         <div id="hero-image"></div>
     </section>
     <!-- End of hero image -->
